<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutsTheme">

    <ScrollView
        style="@style/LayoutsTheme">	
        
	    <LinearLayout
	        style="@style/LayoutsTheme">
	            
		    <TextView
		        android:id="@+id/header"
				style="@style/ControlTheme"
				android:textSize="@dimen/headerTextSize"
				android:background="@drawable/rectangle_rounded_header"
		        android:text="@string/loading_txt_header"/> 
		        
		    <LinearLayout
		        android:layout_marginTop="@dimen/defaultLinearLayoutPadding"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:gravity="center">     
		          
			    <Button 
			        android:id="@+id/start"
			        style="@style/ControlTheme"

			        android:text="@string/loading_btn_start"/>
			    <Button 
			        android:id="@+id/settings"
			        style="@style/ControlTheme"
			        android:text="@string/loading_btn_settings"/>
			    <Button 
			        android:id="@+id/exit"
			        style="@style/ControlTheme"
			        android:text="@string/loading_btn_exit"/>
			    
			</LinearLayout>
			
		</LinearLayout>
			    
	</ScrollView>
	
</LinearLayout>