<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutsTheme">
 
    <ScrollView
        style="@style/LayoutsTheme">
        <LinearLayout 
            style="@style/LayoutsTheme">
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_autostart"/>
		    	<EditText
		    	    android:id="@+id/autostart"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_type"/>
		    	<EditText
		    	    android:id="@+id/type"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_sound_enable"/>
		    	<EditText
		    	    android:id="@+id/sound_enable"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_time_foto"/>
		    	<EditText
		    	    android:id="@+id/time_foto"
		    	    android:inputType="number"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_time_video"/>
		    	<EditText
		    	    android:id="@+id/time_video"
		    	    android:inputType="number"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		   	<LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_time_work"/>
		    	<EditText
		    	    android:id="@+id/time_work"
		    	    android:inputType="number"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_quality_foto"/>
		    	<EditText
		    	    android:id="@+id/quality_foto"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_quality_video"/>
		    	<EditText
		    	    android:id="@+id/quality_video"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_quality_sound"/>
		    	<EditText
		    	    android:id="@+id/quality_sound"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_catalog"/>
		    	<EditText
		    	    android:id="@+id/catalog"
		    	    android:inputType="text"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_catalog_size"/>
		    	<EditText
		    	    android:id="@+id/catalog_size"
		    	    android:inputType="number"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>		
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_save_state"/>
		    	<EditText
		    	    android:id="@+id/save_state"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_time_save_state"/>
		    	<EditText
		    	    android:id="@+id/time_save_state"
		    	    android:inputType="number"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>
		    
		    <LinearLayout
		        style="@style/UsualLayoutsTheme"
		        android:orientation="vertical">
		    	<TextView
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectangle_rounded_header"
		    	    android:text="@string/settings_sync"/>
		    	<EditText
		    	    android:id="@+id/sync"
		    	    style="@style/ControlTheme"
		    	    android:background="@drawable/rectanagle_rounded_btn"
		    	    android:text=""/>
		    </LinearLayout>	
		    <Button
		   		android:id="@+id/save"
		    	style="@style/ControlTheme"
		    	android:background="@drawable/rectanagle_rounded_btn"
		    	android:text="@string/settings_save"/>		        
		</LinearLayout>
	</ScrollView>        
</LinearLayout>    